feature: fala pra texto

--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
     <main>
         <div class="input">
             <input type="text" class="text-container" placeholder="TEXTO A SER TRADUZIDO" id="inputText">
+            <button id="voiceInputButton"><img class="mic" src="./img/mic.png" alt="microfone"></button>
             <select id="lenguageBase" class="text-translate"> </select>
         </div>
         <div class="output">
             <input type="text" class="output-container" id="outputText" placeholder="TRADUÇÃO" disabled>
+            <button id="playButton"><img class="mic" src="./img/falante.png" alt="falante"></button>
             <select id="targetLanguageSelect" class="text-translate"></select>
         </div>
 
